rust/tests/snapshots/help/dictionary__list.snap
---
source: tests/cli/snapshots.rs
---
List catalog definitions (events by default)

Usage: vendo dictionary list [OPTIONS]

Options:
      --type <type>     Filter by subject type (event, prop, group, column, metric, model, audience) [default: event]
  -q, --query <text>    Text search across subject ID, name and description
      --limit <n>       Number of results [default: 20]
      --offset <n>      Pagination offset [default: 0]
      --json            Output raw JSON
      --output <field>  Print a single field per row (e.g. subjectId, displayName)
  -h, --help            Print help

Global options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo dictionary list
  $ vendo dictionary list --type event --query checkout
  $ vendo dictionary list --type prop -q email --json
  $ vendo dictionary list --output subjectId
