rust/tests/snapshots/help/dictionary__search.snap
---
source: tests/cli/snapshots.rs
---
Search one subject type by text in subject ID, name and description

Usage: vendo dictionary search [OPTIONS] <query>

Arguments:
  <query>  

Options:
      --profile <name>  Use a specific account profile
      --type <type>     Filter by subject type (event, prop, group, column, metric, model, audience) [default: event]
      --debug           Enable verbose request diagnostics
      --limit <n>       Number of results [default: 20]
      --offset <n>      Pagination offset [default: 0]
      --json            Output raw JSON
      --output <field>  Print a single field per row (e.g. subjectId, displayName)
  -h, --help            Print help

Examples:
  $ vendo dictionary search checkout
  $ vendo dictionary search email --type prop --json
